# jinbocho-catalog-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-image.yml
app/: config.py  limiter.py  main.py
app/api/: dependencies.py
app/core/: __init__.py  error_tracking.py  exception_handlers.py  lifespan.py  logging_config.py  openapi_config.py  telemetry.py
app/domain/: errors.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_unique_family_isbn.py  0003_add_current_reader.py  0004_add_ownership_and_reads.py  0005_add_book_loans.py  0006_add_genre_raw_and_normalize.py  0007_add_incipit.py  0008_add_removed_members.py  0009_add_wishlist_items.py  0010_rename_family_to_library.py  0011_add_book_loan_borrower_user.py  0012_add_reading_sessions.py  0013_add_quiz_tables.py  0014_add_book_abandonments.py  0015_add_discussion_questions.py  0016_add_reading_session_mode.py  0017_add_journal_entries.py  0018_add_reading_paths.py  0019_add_mystery_picks.py  0020_add_family_challenges.py  0021_add_book_club_tables.py  0022_add_book_club_phase2_3_tables.py  0023_add_active_loan_unique_constraint.py  0024_add_unaccent_search_index.py  4fb4fc3f9b68_add_reminder_sent_at_to_book_loans.py  f953a4b39e75_add_book_ratings_table.py
tests/integration/: conftest.py  test_book_history_repository.py  test_books_api_e2e.py  test_kids_discussion.py  test_kids_family_challenges.py  test_kids_journal.py  test_kids_mystery_picks.py  test_kids_quiz.py  test_kids_reading_paths.py  test_kids_reading_sessions.py  test_owned_book_repository.py
tests/unit/: conftest.py  test_age_band.py  test_ai_dedup_client.py  test_backup.py  test_book_club.py  test_book_club_phase2_3.py  test_book_loans.py  test_bulk_delete_books.py  test_bulk_move_books.py  test_catalog_use_cases.py  test_delete_family_data.py  test_delete_library_data.py  test_fuzzy_dedup.py  test_genre.py  test_goodreads_import_use_cases.py  test_goodreads_parser.py  test_http_isbn_metadata_fetcher.py  test_incipit.py  test_isbn_service.py  test_library_activity_use_case.py  test_loan_reminders.py  test_location_use_cases.py  test_mystery_pick_hint.py  test_retention_purge.py  (+3 more)
(+267 files in other folders)
