[project]
name = "jinbocho-catalog-v1"
version = "0.1.0"
description = "Jinbocho Catalog Service — catalog, locations, ingestion, search, and export"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The SQLAlchemy async engine in app/infrastructure/database/session.py is a
# module-level singleton bound to whichever event loop first uses it; a
# function-scoped loop (the pytest-asyncio default) makes every test after the
# first one fail with "Future attached to a different loop" once integration
# tests touch the real engine. Session scope keeps one loop for the whole run.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/Body() are designed to be used as call-in-default-argument;
# B008 would otherwise flag every endpoint signature in this codebase.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy relationship() string forward-refs (e.g. Mapped["RoomModel"]) are resolved
# by the ORM registry at mapper-configuration time, not by static name resolution.
"app/infrastructure/models/*.py" = ["F821"]
# Re-export barrel modules: __init__.py is import-only per project convention; __all__
# already declares the public surface explicitly.
"**/__init__.py" = ["F403", "F405"]
# FastAPI dependency-injection idiom: Depends(factory(...)) intentionally calls a
# dependency-factory in the default argument; it is re-evaluated per-request by FastAPI.
"app/api/v1/endpoints/*.py" = ["B008"]
# This codebase indents with tabs; ruff's mixed tabs/spaces check also fires on aligned
# prose inside multi-line docstrings, which is not a code style violation.
"*.py" = ["E101"]

